# Aurelion

./: .gitignore  README.md  main.py  pyproject.toml  train_layer1.py
notebooks/: experimento_gaelion.ipynb  topico_ia.ipynb
src/: gaelion_system.py  layer1_distilbert.py  layer2_llamaguard.py
